update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -254,3 +254,12 @@ fabric.properties
 !.vscode/*.code-snippets
 
 # End of https://www.toptal.com/developers/gitignore/api/c,c++,clion,visualstudiocode
+
+
+# Marques
+code.bin
+code.cnt
+code.lst
+code.sec
+code.txt
+out.txt
